--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@multiversx/sdk-core": "13.15.0",
     "@multiversx/sdk-dapp": "3.0.18",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "1.1.0",
     "axios": "1.7.9",
