--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@multiversx/sdk-dapp": "3.2.1",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "1.1.0",
