--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@multiversx/sdk-core": "13.17.1",
     "@multiversx/sdk-dapp": "3.2.1",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-popover": "^1.1.2",
